--- a/edgebound/src/app/components/categories/pisos-y-muros/pisos-y-muros.component.html
+++ b/edgebound/src/app/components/categories/pisos-y-muros/pisos-y-muros.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="d-none d-lg-block">
   <div class="breadcrumb">
     <div class="breadcrumb-path">
       <a href="">
@@ -104,6 +104,107 @@
       <p>Llegaste al final de esta categoría</p>
     </div>
   </div>
+
+
+</main>
+
+<main class="d-block d-sm-none">
+  <div class="breadcrumb">
+    <div class="breadcrumb-path">
+      <a href="">
+        <span>Tienda</span>
+        <i class="material-icons">chevron_right</i>
+      </a>
+      <a routerLink="/category/pisos-y-muros">
+        <span>Pisos y muros</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- CAROUSEL PRINCIPAL -->
+  <div id="carouselPrincipal" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <li type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true"></li>
+      <li type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="4000">
+        <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/category-welcome-slider/PYM-500x500.png" alt="">
+      </div>
+      <div class="carousel-item" data-bs-interval="4000">
+          <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/category-welcome-slider/500x500_PISOS-Y-MUROS_TRES.jpg" alt="">
+      </div>
+    </div>
+    <button class="carousel-control-prev op-0" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="prev">
+      <span class="material-icons ico-left" aria-hidden="true">chevron_left</span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next op-0" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="next">
+      <span class="material-icons ico-right" aria-hidden="true">chevron_right</span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+  <!-- <div class="catalog">
+    <section class="filters">
+      <div class="filters-container">
+        <div class="filters-list">
+          <div class="filters-list-head">
+            <div class="filters-list-quantity">
+              <span>739 </span>
+              <span> resultados</span>
+            </div>
+            <button>
+              <span>limpiar</span>
+              <i class="material-icons">refresh</i>
+            </button>
+          </div>
+          <div class="filters-orderby">
+            <p>
+              <i class="material-icons">swap_vert</i>
+              <span>Ordenar por:</span>
+            </p>
+            <label><input type="radio" name="orderby" value="default" checked=""><span>Relevancia</span></label>
+            <label><input type="radio" name="orderby" value="high_price"><span>Mayor precio</span></label>
+            <label><input type="radio" name="orderby" value="low_price"><span>Menor precio</span></label>
+            <label><input type="radio" name="orderby" value="abc"><span>Alfabético</span></label>
+          </div>
+         
+          <div class="filters-block">
+            <button class="filters-block-toggle" (click)="dropdown()">
+              <i class="material-icons">add</i>
+              <p>color</p>
+            </button>
+            <div class="filters-block-items"><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221+L%22"><span>1 L</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221+mm%22"><span>1 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221.5+mm%22"><span>1.5 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2210+X+10+cm%22"><span>10 X 10 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2212+X+12+cm%22"><span>12 X 12 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2212+mm%22"><span>12 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22128.6+X+1.6+cm%22"><span>128.6 X 1.6 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22128.6+X+19.4+cm%22"><span>128.6 X 19.4 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22129+X+19.4+cm%22"><span>129 X 19.4 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2214.3+X+89.3+cm%22"><span>14.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2218+X+55+cm%22"><span>18 X 55 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219+X+19+cm%22"><span>19 X 19 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.3+X+119+cm%22"><span>19.3 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.3+X+89.3+cm%22"><span>19.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.5+X+13+X+7+cm%22"><span>19.5 X 13 X 7 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%222+X+2+cm%22"><span>2 X 2 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%222+mm%22"><span>2 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+120+cm%22"><span>20 X 120 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+20+cm%22"><span>20 X 20 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+30+cm%22"><span>20 X 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+50+cm%22"><span>20 X 50 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+90+cm%22"><span>20 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+x+30+cm%22"><span>20 x 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22217.5+X+24.3+cm%22"><span>217.5 X 24.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2222+mm%22"><span>22 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2224+X+10+X+18+cm%22"><span>24 X 10 X 18 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2225+X+40+cm%22"><span>25 X 40 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2225+X+75+cm%22"><span>25 X 75 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+119+cm%22"><span>29.1 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+59.3+cm%22"><span>29.1 X 59.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+89.3+cm%22"><span>29.1 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%223+mm%22"><span>3 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+30+cm%22"><span>30 X 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+45+cm%22"><span>30 X 45 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+60+cm%22"><span>30 X 60 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+90+cm%22"><span>30 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2233+X+33+cm%22"><span>33 X 33 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2240+X+40+cm%22"><span>40 X 40 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2244+X+44+cm%22"><span>44 X 44 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2244.3+X+89.3+cm%22"><span>44.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2245+X+90+cm%22"><span>45 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%225+X+5+cm%22"><span>5 X 5 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%225+mm%22"><span>5 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2250+X+50+cm%22"><span>50 X 50 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2255+X+55+cm%22"><span>55 X 55 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+119+cm%22"><span>59.3 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+59.3+cm%22"><span>59.3 X 59.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+89.3+cm%22"><span>59.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2260+X+120+cm%22"><span>60 X 120 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2260+X+60+cm%22"><span>60 X 60 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%227+mm%22"><span>7 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22%C3%9Anico%22"><span>Único</span></label></div>
+          </div>
+
+          <div class="filters-block">
+            <button class="filters-block-toggle" (click)="dropdown()">
+              <i class="material-icons">add</i>
+              <p>tamaño</p>
+            </button>
+            <div class="filters-block-items"><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221+L%22"><span>1 L</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221+mm%22"><span>1 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%221.5+mm%22"><span>1.5 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2210+X+10+cm%22"><span>10 X 10 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2212+X+12+cm%22"><span>12 X 12 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2212+mm%22"><span>12 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22128.6+X+1.6+cm%22"><span>128.6 X 1.6 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22128.6+X+19.4+cm%22"><span>128.6 X 19.4 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22129+X+19.4+cm%22"><span>129 X 19.4 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2214.3+X+89.3+cm%22"><span>14.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2218+X+55+cm%22"><span>18 X 55 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219+X+19+cm%22"><span>19 X 19 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.3+X+119+cm%22"><span>19.3 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.3+X+89.3+cm%22"><span>19.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2219.5+X+13+X+7+cm%22"><span>19.5 X 13 X 7 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%222+X+2+cm%22"><span>2 X 2 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%222+mm%22"><span>2 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+120+cm%22"><span>20 X 120 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+20+cm%22"><span>20 X 20 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+30+cm%22"><span>20 X 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+50+cm%22"><span>20 X 50 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+X+90+cm%22"><span>20 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2220+x+30+cm%22"><span>20 x 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22217.5+X+24.3+cm%22"><span>217.5 X 24.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2222+mm%22"><span>22 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2224+X+10+X+18+cm%22"><span>24 X 10 X 18 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2225+X+40+cm%22"><span>25 X 40 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2225+X+75+cm%22"><span>25 X 75 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+119+cm%22"><span>29.1 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+59.3+cm%22"><span>29.1 X 59.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2229.1+X+89.3+cm%22"><span>29.1 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%223+mm%22"><span>3 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+30+cm%22"><span>30 X 30 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+45+cm%22"><span>30 X 45 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+60+cm%22"><span>30 X 60 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2230+X+90+cm%22"><span>30 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2233+X+33+cm%22"><span>33 X 33 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2240+X+40+cm%22"><span>40 X 40 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2244+X+44+cm%22"><span>44 X 44 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2244.3+X+89.3+cm%22"><span>44.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2245+X+90+cm%22"><span>45 X 90 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%225+X+5+cm%22"><span>5 X 5 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%225+mm%22"><span>5 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2250+X+50+cm%22"><span>50 X 50 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2255+X+55+cm%22"><span>55 X 55 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+119+cm%22"><span>59.3 X 119 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+59.3+cm%22"><span>59.3 X 59.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2259.3+X+89.3+cm%22"><span>59.3 X 89.3 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2260+X+120+cm%22"><span>60 X 120 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%2260+X+60+cm%22"><span>60 X 60 cm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%227+mm%22"><span>7 mm</span></label><label class="filters-checkbox"><input type="checkbox" value="ads_f42254_ntk_cs%3A%22%C3%9Anico%22"><span>Único</span></label></div>
+          </div>
+
+        </div>
+      </div>
+      <div class="banner-small">
+        <a href="">
+          <picture>
+            <img data-src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/filter-banner/espot-260x260.png" alt="seo title for image" class=" lazyloaded" src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/filter-banner/espot-260x260.png">
+          </picture>
+        </a>
+      </div>
+    </section>
+    <aside class="catalog-container">
+      <app-catalog-item *ngFor="let i of arre;"></app-catalog-item>
+    </aside>
+    <div class="catalog-pagination">
+      <p>Llegaste al final de esta categoría</p>
+    </div>
+  </div> -->
 
 
 </main>
