--- a/edgebound/src/app/components/footer/footer.component.html
+++ b/edgebound/src/app/components/footer/footer.component.html
@@ -1,64 +1,155 @@
+<!-- <!- <!- mobile -> -> -->
 <footer class="layout-footer">
-    <div class="layout-footer-container">
-        <div class="layout-footer-main">
-            <div class="layout-footer-logo">
-                <img src="https://llanodelatorre.com.mx/static/media/logo-slogan.2840a57f.svg" alt="Llano de la Torre">
-            </div>
-            <div class="layout-footer-links">
-                <ul>
-                    <li><a routerLink="/quienes-somos">Quienes somos</a></li>
-                    <li><a routerLink="/sucursales">Sucursales</a></li>
-                    <li><a routerLink="/faq">Preguntas frecuentes</a></li>
-                    <li><a [routerLink]="['envios']">Envíos</a></li>
-                    <li><a routerLink="/contacto">Contacto</a></li>
-                    <li><a routerLink="/terminos-y-condiciones">Términos y condiciones</a></li>
-                    <li><a href="https://blog.llanodelatorre.com.mx/" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="https://llanodelatorre.mx/" target="_blank" rel="noopener noreferrer">Descarga tu factura</a></li>
-                    <li><a routerLink="/mayoreo">Mayoreo </a></li>
-                    <li><a href="https://s3.amazonaws.com/llanomx.wcaas.media/espots/footer-promociones/promociones_puntodeventa.xls" target="_self" rel="noopener noreferrer">Promociones </a></li>
-                </ul>
-            </div>
-            <div class="layout-footer-secure">
-                <div class="layout-footer-cards">
-                    <div>
-                        <i class="material-icons-outlined">verified_user</i>
-                        <p>Compra Segura</p>
-                    </div>
-                    <div>
-                        <img src="https://llanodelatorre.com.mx/static/media/footer-cards+paypal.77462420.svg" alt="Paga rápido y seguro con tu método favorito">
-                    </div>
-                </div>
-                <div class="layout-footer-copyright">
-                        <p>
-                            ©
-                            2021
-                            Llano de la Torre | Todos los derechos reservados
-                        </p>
-                        <a href="http://edgebound.com/">Edgebound eCommerce</a>
-                </div>
-            </div>
+  <div class="layout-footer-container">
+    <div class="layout-footer-main">
+      <div class="layout-footer-logo"><img src="/assets/img/logo-slogan.svg" alt="Llano de la Torre"></div>
+      <div class="layout-footer-social"><a href="https://www.instagram.com/llanodelatorre/" target="_blank"
+          rel="noopener noreferrer"><img src="/assets/img/social-instagram.svg" alt="Instagram"></a><a
+          href="https://www.facebook.com/LlanoDeLaTorre" target="_blank" rel="noopener noreferrer"><img
+            src="/assets/img/social-facebook.svg" alt="Facebook"></a><a
+          href="https://www.pinterest.com.mx/llanodelatorreoficial/" target="_blank" rel="noopener noreferrer"><img
+            src="/assets/img/social-pinterest.svg" alt="Pinterest"></a></div>
+      <div class="layout-footer-links">
+        <ul>
+          <li><a routerLink="/quienes-somos">Quienes somos</a></li>
+          <li><a routerLink="/sucursales">Sucursales</a></li>
+          <li><a routerLink="/faq">Preguntas frecuentes</a></li>
+          <li><a routerLink="/envios">Envíos</a></li>
+          <li><a routerLink="/contacto">Contacto</a></li>
+          <li><a routerLink="/terminos-y-condiciones">Términos y condiciones</a></li>
+          <li><a href="https://blog.llanodelatorre.com.mx/" target="_blank" rel="noopener noreferrer">Blog</a></li>
+          <li><a href="https://llanodelatorre.mx/" target="_blank" rel="noopener noreferrer">Descarga tu factura</a>
+          </li>
+          <li><a routerLink="/mayoreo">Mayoreo </a></li>
+          <li><a
+              href="https://s3.amazonaws.com/llanomx.wcaas.media/espots/footer-promociones/promociones_puntodeventa.xls"
+              target="_self" rel="noopener noreferrer">Promociones </a></li>
+        </ul>
+      </div>
+      <div class="layout-footer-contact"><i class="material-icons ">call</i>
+        <p>Atención</p>
+        <div><a href="tel:5540001319">(55)4000 1319</a><a href="tel:5556059467">(55)5605 9467</a></div>
+      </div>
+      <div class="layout-footer-secure">
+        <div class="layout-footer-cards">
+          <div><i class="material-icons-outlined ">verified_user</i>
+            <p>Compra Segura</p>
+          </div>
+          <div><img src="/assets/img/footer-cards-mobile+paypal.svg" alt="Paga rápido y seguro con tu método favorito">
+          </div>
         </div>
-
-        <div class="layout-footer-side">
-            <div class="layout-footer-social">
-                <a href="https://www.instagram.com/llanodelatorre/" target="_blank" rel="noopener noreferrer">
-                    <img src="https://llanodelatorre.com.mx/static/media/social-instagram.df7ee037.svg" alt="Instagram">
-                </a>
-                <a href="https://www.facebook.com/LlanoDeLaTorre" target="_blank" rel="noopener noreferrer">
-                    <img src="https://llanodelatorre.com.mx/static/media/social-facebook.1e26180a.svg" alt="Facebook">
-                </a>
-                <a href="https://www.pinterest.com.mx/llanodelatorreoficial/" target="_blank" rel="noopener noreferrer">
-                    <img src="https://llanodelatorre.com.mx/static/media/social-pinterest.379ff448.svg" alt="Pinterest">
-                </a>
-            </div>
-            <div class="layout-footer-contact">
-                <i class="material-icons">call</i>
-                <p>Atención</p>
-                <div>
-                    <p>(55)4000 1319</p>
-                    <p>(55)5605 9467</p>
-                </div>
-            </div>
+        <div class="layout-footer-copyright">
+          <p>© 2021 Llano de la Torre | Todos los derechos reservados</p><a href="http://edgebound.com/">Edgebound
+            eCommerce</a>
         </div>
+      </div>
     </div>
+  </div>
+</footer>
+
+<!-- <!- <!- tablet -> -> -->
+<footer class="layout-footer-tb">
+  <div class="layout-footer-container">
+    <div class="layout-footer-main">
+      <div class="layout-footer-logo"><img src="/assets/img/logo-slogan.svg" alt="Llano de la Torre"></div>
+      <div class="layout-footer-links">
+        <ul>
+          <li><a routerLink="/quienes-somos">Quienes somos</a></li>
+          <li><a routerLink="/sucursales">Sucursales</a></li>
+          <li><a routerLink="/faq">Preguntas frecuentes</a></li>
+          <li><a routerLink="/envios">Envíos</a></li>
+          <li><a routerLink="/contacto">Contacto</a></li>
+          <li><a routerLink="/terminos-y-condiciones">Términos y condiciones</a></li>
+          <li><a href="https://blog.llanodelatorre.com.mx/" target="_blank" rel="noopener noreferrer">Blog</a></li>
+          <li><a href="https://llanodelatorre.mx/" target="_blank" rel="noopener noreferrer">Descarga tu factura</a>
+          </li>
+          <li><a routerLink="/mayoreo">Mayoreo </a></li>
+          <li><a
+              href="https://s3.amazonaws.com/llanomx.wcaas.media/espots/footer-promociones/promociones_puntodeventa.xls"
+              target="_self" rel="noopener noreferrer">Promociones </a></li>
+        </ul>
+      </div>
+      <div class="layout-footer-side">
+        <div class="layout-footer-social"><a href="https://www.instagram.com/llanodelatorre/" target="_blank"
+            rel="noopener noreferrer"><img src="/assets/img/social-instagram.svg" alt="Instagram"></a><a
+            href="https://www.facebook.com/LlanoDeLaTorre" target="_blank" rel="noopener noreferrer"><img
+              src="/assets/img/social-facebook.svg" alt="Facebook"></a><a
+            href="https://www.pinterest.com.mx/llanodelatorreoficial/" target="_blank" rel="noopener noreferrer"><img
+              src="/assets/img/social-pinterest.svg" alt="Pinterest"></a></div>
+        <div class="layout-footer-contact"><i class="material-icons ">call</i>
+          <p>Atención</p>
+          <div>
+            <p>(55)4000 1319</p>
+            <p>(55)5605 9467</p>
+          </div>
+        </div>
+      </div>
+      <div class="layout-footer-secure">
+        <div class="layout-footer-cards">
+          <div><i class="material-icons-outlined ">verified_user</i>
+            <p>Compra Segura</p>
+          </div>
+          <div><img src="/assets/img/footer-cards+paypal.svg" alt="Paga rápido y seguro con tu método favorito"></div>
+        </div>
+        <div class="layout-footer-copyright">
+          <p>© 2021 Llano de la Torre | Todos los derechos reservados</p><a href="http://edgebound.com/">Edgebound
+            eCommerce</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- desktop -->
+<footer class="layout-footer-desktop">
+  <div class="layout-footer-container">
+    <div class="layout-footer-main">
+      <div class="layout-footer-logo"><img src="/assets/img/logo-slogan.svg" alt="Llano de la Torre"></div>
+      <div class="layout-footer-links">
+        <ul>
+          <li><a routerLink="/quienes-somos">Quienes somos</a></li>
+          <li><a routerLink="/sucursales">Sucursales</a></li>
+          <li><a routerLink="/faq">Preguntas frecuentes</a></li>
+          <li><a routerLink="/envios">Envíos</a></li>
+          <li><a routerLink="/contacto">Contacto</a></li>
+          <li><a routerLink="/terminos-y-condiciones">Términos y condiciones</a></li>
+          <li><a href="https://blog.llanodelatorre.com.mx/" target="_blank" rel="noopener noreferrer">Blog</a></li>
+          <li><a href="https://llanodelatorre.mx/" target="_blank" rel="noopener noreferrer">Descarga tu factura</a>
+          </li>
+          <li><a routerLink="/mayoreo">Mayoreo </a></li>
+          <li><a
+              href="https://s3.amazonaws.com/llanomx.wcaas.media/espots/footer-promociones/promociones_puntodeventa.xls"
+              target="_self" rel="noopener noreferrer">Promociones </a></li>
+        </ul>
+      </div>
+      <div class="layout-footer-secure">
+        <div class="layout-footer-cards">
+          <div><i class="material-icons-outlined ">verified_user</i>
+            <p>Compra Segura</p>
+          </div>
+          <div><img src="/assets/img/footer-cards+paypal.svg"
+              alt="Paga rápido y seguro con tu método favorito"></div>
+        </div>
+        <div class="layout-footer-copyright">
+          <p>© 2021 Llano de la Torre | Todos los derechos reservados</p><a href="http://edgebound.com/">Edgebound
+            eCommerce</a>
+        </div>
+      </div>
+    </div>
+    <div class="layout-footer-side">
+      <div class="layout-footer-social"><a href="https://www.instagram.com/llanodelatorre/" target="_blank"
+          rel="noopener noreferrer"><img src="/assets/img/social-instagram.svg" alt="Instagram"></a><a
+          href="https://www.facebook.com/LlanoDeLaTorre" target="_blank" rel="noopener noreferrer"><img
+            src="/assets/img/social-facebook.svg" alt="Facebook"></a><a
+          href="https://www.pinterest.com.mx/llanodelatorreoficial/" target="_blank" rel="noopener noreferrer"><img
+            src="/assets/img/social-pinterest.svg" alt="Pinterest"></a></div>
+      <div class="layout-footer-contact"><i class="material-icons ">call</i>
+        <p>Atención</p>
+        <div>
+          <p>(55)4000 1319</p>
+          <p>(55)5605 9467</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
